Epic 5: Improve tests coverage